--- a/system-of-equations.ipynb
+++ b/system-of-equations.ipynb
@@ -10,7 +10,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5-final"
+   "version": "3.8.6-final"
   },
   "orig_nbformat": 2,
   "kernelspec": {
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,11 +85,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "[5.66666667 5.1        0.625     ]\n[4.73       3.90416667 1.19166667]\n[5.04472222 4.03483333 1.00979167]\n[4.99433889 3.99007639 1.00311806]\n[5.00240046 4.00082042 0.99822674]\n[4.99959948 3.99969723 0.99990505]\n[5.00004789 4.0000896  0.99997437]\n[4.99997866 3.99999298 1.00001641]\n[5.00000359 4.00000263 1.00000091]\n[4.9999996  3.99999919 1.00000021]\niterations: 10\n"
+    },
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "array([4.9999996 , 3.99999919, 1.00000021])"
+     },
+     "metadata": {},
+     "execution_count": 2
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "\n",
@@ -115,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -163,11 +177,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "[1.         0.625      1.04166667]\n[1.10416667 1.02864583 0.97366898]\n[0.98625579 0.98840784 1.00434229]\n[1.00398361 1.00212631 0.9988785 ]\n[0.99918805 0.99947794 1.00023844]\n[1.00019012 1.00011318 0.99994517]\n[0.999958   0.99997419 1.0000122 ]\n[1.0000095  1.00000576 0.99999725]\n[0.99999787 0.9999987  1.00000062]\n[1.00000048 1.00000029 0.99999986]\niterations: 10\n"
+    },
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "array([1.00000048, 1.00000029, 0.99999986])"
+     },
+     "metadata": {},
+     "execution_count": 4
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "\n",
@@ -193,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -245,22 +273,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "[ 1.65       -2.805       1.2111      1.6654275   3.06780994]\n[ 1.07967477 -1.260654    2.04248922  1.9953725   2.0495358 ]\n[ 0.76340549 -0.87330065  1.86185863  1.9322527   1.90600341]\n[ 0.77765507 -1.00663597  1.85752216  1.90462358  2.00009655]\n[ 0.78821424 -1.00889485  1.86842882  1.9126684   1.99271663]\n[ 0.78680966 -1.00120508  1.86641069  1.91303736  1.9885688 ]\n[ 0.78653107 -1.0024766   1.86618347  1.9125117   1.98976499]\n[ 0.78664213 -1.00266623  1.86634656  1.91258751  1.98977367]\n[ 0.78663594 -1.0025574   1.86632762  1.91260294  1.98970349]\n[ 0.78663114 -1.00256781  1.86632187  1.91259564  1.98971666]\n[ 0.78663244 -1.00257203  1.86632409  1.91259617  1.98971813]\niterations: 11\n"
+    },
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "array([ 0.78663244, -1.00257203,  1.86632409,  1.91259617,  1.98971813])"
+     },
+     "metadata": {},
+     "execution_count": 9
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "\n",
-    "dim = 3\n",
+    "dim = 5\n",
     "A = np.array([\n",
-    "    [4, 3, 0],\n",
-    "    [3, 4, -1],\n",
-    "    [0, -1, 4]\n",
+    "    [4, 1, 1, 0, 1],\n",
+    "    [-1, -3, 1 ,1, 0],\n",
+    "    [2, 1, 5, -1, -1],\n",
+    "    [-1, -1, -1, 4, 0],\n",
+    "    [0, 2, -1, 1, 4]\n",
     "    ], dtype=float)\n",
-    "B = np.array([24, 30, -24], dtype=float)\n",
-    "ω = 1.25\n",
+    "B = np.array([6, 6, 6, 6, 6], dtype=float)\n",
+    "ω = 1.1\n",
     "tol = 1e-5\n",
     "n = 100\n",
     "\n",
