interpolation: Print difference tables
Signed-off-by: Shanthanu S Rai <shanthanu.s.rai9@gmail.com>

--- a/interpolation.ipynb
+++ b/interpolation.ipynb
@@ -70,12 +70,14 @@
     "    # Maintaining a column of forward difference table\n",
     "    # [Move ahead in the table in each iteration]\n",
     "    fd_col = list(y)\n",
+    "    print('0:', fd_col)\n",
     "\n",
     "    y_pred = 0\n",
     "    for i in range(0, n):\n",
     "        y_pred += comb(u, i) * fd_col[0]\n",
     "        for j in range(0, n-i-1):\n",
     "            fd_col[j] = fd_col[j+1] - fd_col[j]\n",
+    "        print(f'{i+1}:', fd_col[:n-i-1])\n",
     "    \n",
     "    return y_pred"
    ]
@@ -132,13 +134,15 @@
     "    # Maintaining a column of (reverse) backward difference table\n",
     "    # [Move ahead in the table in each iteration]\n",
     "    rbk_col = y[::-1]   # reverse\n",
-    "    print()\n",
+    "    print(\"Columns are in reverse order:\")\n",
+    "    print('0:', rbk_col)\n",
     "\n",
     "    y_pred = 0\n",
     "    for i in range(0, n):\n",
     "        y_pred += (-1)**i * comb(-u, i) * rbk_col[0]\n",
     "        for j in range(0, n-i-1):\n",
     "            rbk_col[j] = rbk_col[j] - rbk_col[j+1]\n",
+    "        print(f'{i+1}', rbk_col[:n-i-1])\n",
     "    \n",
     "    return y_pred"
    ]
@@ -193,6 +197,7 @@
     "    # Maintaining a column of divided difference table\n",
     "    # [Move ahead in the table in each iteration]\n",
     "    dd_col = list(y)\n",
+    "    print('0:', dd_col)\n",
     "\n",
     "    x_coef = 1\n",
     "    y_pred = 0\n",
@@ -201,6 +206,7 @@
     "        x_coef *= (x_pred - x[i])\n",
     "        for j in range(0, n-i-1):\n",
     "            dd_col[j] = (dd_col[j+1] - dd_col[j])/(x[j+i+1] - x[j])\n",
+    "        print(f'{i+1}:', dd_col[:n-i-1])\n",
     "    \n",
     "    return y_pred"
    ]
@@ -331,11 +337,13 @@
     "    # Maintaining a column of divided difference table\n",
     "    # [Move ahead in the table in each iteration]\n",
     "    dd_col = double_each_element(y)\n",
+    "    print('0:', dd_col)\n",
     "    for j in range(0, n-1):\n",
     "        if j%2 == 0:\n",
     "            dd_col[j] = y_der[j//2]\n",
     "        else:\n",
     "            dd_col[j] = (dd_col[j+1] - dd_col[j])/(z[j+1] - z[j])\n",
+    "    print('1:', dd_col[:-1])\n",
     "\n",
     "    z_coef = (x_pred - z[0])\n",
     "    y_pred = y[0]\n",
@@ -344,6 +352,7 @@
     "        z_coef *= (x_pred - z[i])\n",
     "        for j in range(0, n-i-1):\n",
     "            dd_col[j] = (dd_col[j+1] - dd_col[j])/(z[j+i+1] - z[j])\n",
+    "        print(f'{i+1}:', dd_col[:n-i-1])\n",
     "    \n",
     "    return y_pred\n"
    ]
